<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coco</string>
    <string name="hello_world">Hello world!</string>
    <string name="heart">love</string>
    <string name="money">money</string>
    <string name="cloud">cloud</string>
    <string name="line">line</string>
    <string name="game">game</string>
    <string name="message">message</string>
    <string name="share">share</string>
    <string name="gushi">gushi</string>
    <string name="card">card</string>
    
    <string name="action_settings">settings</string>
    <string name="about">about us</string>
    <string name="friend">朋友圈</string>
    <string name="read">阅读</string>
    <string name="photo">照片</string>
    <string name="lab">实验室</string>
    <string name="info">信息</string>
    
    <string name="hintuser">请输入用户名...</string>
    <string name="hintpass">请输入密码...</string>
    <string name="usercenter">用户中心</string>
    <string name="back">返回</string>
    <string name="login">登  录</string>
    <string name="register">注  册</string>
    <string name="start">开始</string>
    
    <string name="createblog">添加</string>
    <string name="save">保存</string>
    
    <string name="update">更新</string>
    <string name="delete">删除</string>
    
    
    <string name="hint_title">请输入标题</string>
    <string name="hint_content">请输入内容</string>
    
    
    <string name="add_blog_success">添加成功！</string>
    <string name="add_blog_fail">添加失败！</string>
    
   	<string name="loginfail">用户名或者密码错误，请重试！</string>
   	
    <string name="repair_progress_date_format_deafault">yyyy-MM-dd HH:mm:ss</string>
    <string name="repair_progress_date_format">yyyy年MM月dd日</string>
    <string name="order_date_format">%-Y-%-m-%-d</string>
    
    
    <string name="exit_on_the_second_back_key_pressed">再按一次退出个人笔记</string>
    
    <string name="item">item</string>
    
    
    

</resources>
