<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/circle"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
 		android:layout_marginTop="30dip"
        android:clickable="true"
        android:background="@drawable/linear_select_backgroud"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
			android:layout_gravity="center_vertical"
            android:background="@drawable/circle" />

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dip"
            android:text="@string/friend"
            android:textSize="16sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dip"
 		android:layout_marginTop="30dip"
        android:clickable="true"
        android:background="@drawable/linear_select_backgroud"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
			android:layout_gravity="center_vertical"
            android:background="@drawable/photo" />

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dip"
            android:text="@string/photo"
            android:textSize="16sp" />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_height="1px"
        android:background="@color/darkgray"
        android:orientation="horizontal" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:clickable="true"
        android:background="@drawable/linear_select_backgroud"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
			android:layout_gravity="center_vertical"
            android:background="@drawable/read" />

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dip"
            android:text="@string/read"
            android:textSize="16sp" />
        
    </LinearLayout>

</LinearLayout>